--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.7.9",
     "font-awesome": "^4.7.0",
     "node-fetch": "^3.3.2",
+    "pinia": "^2.3.1",
+    "utility": "^2.5.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
