--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "font-awesome": "^4.7.0",
+    "moment-timezone": "^0.5.47",
     "node-fetch": "^3.3.2",
     "pinia": "^2.3.1",
     "utility": "^2.5.0",
